--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 <main class="content-wrapper">
   <header class="white-text-container section-container">
     <div class="text-center">
-      <h1>I am Alex N. Kinuthia</h1>
-      <p>Full-stack Software Engineer</p>
+      <h1>I am Alex Njuguna</h1>
+      <h3>Full-stack Software Engineer</h3>
       <p>
         <a class="fa-icon fa-icon-2x" href="https://www.facebook.com/profile.php?id=100088245074466" title="">
           <i class="fa fa-facebook"></i>
@@ -46,7 +46,7 @@
 
 
 
-<!-- Add your site or app content here -->
+
  
  <div class="container">
    <div class="row">
@@ -75,6 +75,8 @@
           </div>
         </div>
 
+
+        <!-- projects  -->
         <div class="card">
           <div class="card-block">
             <h2>Projects</h2>
@@ -154,6 +156,8 @@
             </div>
           </div>
         </div>
+        <!-- projects end here -->
+        
 
         <div class="card">
           <div class="card-block">
@@ -337,7 +341,7 @@
       <div class="col-xs-12">
         <p><img src="./assets/images/dev.ico" alt=""></p>
         
-        <p>©All right reserved.</p>
+        <p>©All right reserved | <a href="https://alex-njuguna.github.io">Alex Njuguna</a></p>
         <p>
           <a class="fa-icon fa-icon-2x" href="https://www.facebook.com/profile.php?id=100088245074466" title="">
             <i class="fa fa-facebook"></i>
@@ -362,19 +366,7 @@
      scrollRevelation('.card');
   });
 </script>
-<!-- Google Analytics: change UA-XXXXX-X to be your site's ID 
 
-<script>
-  (function (i, s, o, g, r, a, m) {
-    i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
-      (i[r].q = i[r].q || []).push(arguments)
-    }, i[r].l = 1 * new Date(); a = s.createElement(o),
-      m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
-  })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
-  ga('create', 'UA-XXXXX-X', 'auto');
-  ga('send', 'pageview');
-</script>
-
---><script type="text/javascript" src="./main.bc58148c.js"></script></body>
+<script type="text/javascript" src="./main.bc58148c.js"></script></body>
 
 </html>
