--- a/index.html
+++ b/index.html
@@ -136,6 +136,15 @@
                   </p>
                 </div>
               </a>
+
+              <a href="https://github.com/alex-njuguna/Meme-Generator">
+                <div class="col-md-4">
+                  <img src="./assets/images/multiple.jpeg" class="img-responsive" alt="">
+                  <h3 class="h5">Meme Generator</h3>
+                  <p>A platform that allows generation of memes</p>
+                </div>
+              </a>
+
               
               <a href="https://github.com/alex-njuguna/Dance-with-js">
                 <div class="col-md-4">
