--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 
               <a href="https://github.com/alex-njuguna/Meme-Generator">
                 <div class="col-md-4">
-                  <img src="./assets/images/multiple.jpeg" class="img-responsive" alt="">
+                  <img src="./assets/images/meme.jpeg" class="img-responsive" alt="">
                   <h3 class="h5">Meme Generator</h3>
                   <p>A platform that allows generation of memes</p>
                 </div>
