--- a/index.html
+++ b/index.html
@@ -323,6 +323,7 @@
           </div>
         </div>
 
+       <!-- contact card -->
         <div class="card">
           <div class="card-block">
             <div class="contact-card">
