--- a/index.html
+++ b/index.html
@@ -83,15 +83,14 @@
     <!-- services section-->
     <section id="services">
         <div class="container">
-            <h1 class="text-center">Services</h1>
+            <h1 class="text-center text-light">Services</h1>
             <div class="row">
                 <div class="col-lg-4 mt-4">
                     <div class="card servicesText">
                         <div class="card-body">
                             <i class="fas servicesIcon fa-clock"></i>
-                            <h4 class="card-title mt-3">Website Development</h4>
-                            <p class="card-text mt-3">Some quick example text to build on the card title and make up the bulk of the card's content.
-                                Some quick example text to build on the card title and make up the bulk of the card's content.
+                            <h4 class="card-title mt-3">Software Development</h4>
+                            <p class="card-text mt-3">Whether you need a custom web application or a complex enterprise system, I can transform your ideas into reality. With my extensive experience in various programming languages, I deliver high-quality, scalable, and secure software solutions tailored to your specific needs.
                             </p>
                         </div>
                     </div>  
@@ -100,9 +99,8 @@
                     <div class="card servicesText">
                         <div class="card-body">
                             <i class='fas servicesIcon fa-layer-group'></i>
-                            <h4 class="card-title mt-3">Website Design</h4>
-                            <p class="card-text mt-3">Some quick example text to build on the card title and make up the bulk of the card's content.
-                                Some quick example text to build on the card title and make up the bulk of the card's content.
+                            <h4 class="card-title mt-3">Software Design</h4>
+                            <p class="card-text mt-3"> I specialize in creating robust, user-centric software designs that drive business growth and efficiency. Leveraging my expertise in UI/UX principles, I architect software that is not only visually appealing but also intuitive and user-friendly, ensuring a seamless user experience.
                             </p>
                         </div>
                     </div>  
@@ -112,9 +110,8 @@
                     <div class="card servicesText">
                         <div class="card-body">
                             <i class='far servicesIcon fa-check-circle'></i>
-                            <h4 class="card-title mt-3">Website Deployment</h4>
-                            <p class="card-text mt-3">Some quick example text to build on the card title and make up the bulk of the card's content.
-                                Some quick example text to build on the card title and make up the bulk of the card's content.
+                            <h4 class="card-title mt-3">Software Deployment</h4>
+                            <p class="card-text mt-3"> Deploying software is more than just uploading files; it's about ensuring your application is running smoothly and efficiently. I handle the entire deployment process, from testing to launch, ensuring zero downtime and optimal performance. I also provide post-deployment support to ensure your software continues to run flawlessly.
                             </p>
                         </div>
                     </div>  
@@ -127,8 +124,7 @@
                         <div class="card-body">
                             <i class='fas servicesIcon fa-search'></i>
                             <h4 class="card-title mt-3">SEO</h4>
-                            <p class="card-text mt-3">Some quick example text to build on the card title and make up the bulk of the card's content.
-                                Some quick example text to build on the card title and make up the bulk of the card's content.
+                            <p class="card-text mt-3">Improving your website's visibility on search engines is my forte. I utilize advanced SEO strategies and techniques to optimize your site's content, structure, and metadata. I work diligently to boost your online presence and drive organic traffic to your site, ultimately leading to increased conversions and revenue.
                             </p>
                         </div>
                     </div>  
@@ -137,22 +133,21 @@
                 <div class="col-lg-4 mt-4">
                     <div class="card servicesText">
                         <div class="card-body">
-                            <i class='fas servicesIcon fa-shield-alt'></i>
+                            <i class="fas servicesIcon fa-shield-alt"></i>
                             <h4 class="card-title mt-3">DevOps</h4>
-                            <p class="card-text mt-3">Some quick example text to build on the card title and make up the bulk of the card's content.
-                                Some quick example text to build on the card title and make up the bulk of the card's content.
+                            <p class="card-text mt-3">Specializing in DevOps, I streamline your software development and delivery processes. By implementing automated testing and continuous integration tools, I reduce errors and enhance your team's productivity. Ensuring faster, more reliable deployments, I make your workflow more efficient and effective.
                             </p>
                         </div>
-                    </div>  
+                    </div>
                 </div>
+                
 
                 <div class="col-lg-4 mt-4">
                     <div class="card servicesText">
                         <div class="card-body">
                             <i class='fas servicesIcon fa-wrench'></i>
                             <h4 class="card-title mt-3">QA</h4>
-                            <p class="card-text mt-3">Some quick example text to build on the card title and make up the bulk of the card's content.
-                                Some quick example text to build on the card title and make up the bulk of the card's content.
+                            <p class="card-text mt-3">Quality Assurance is paramount to ensure your software delivers the intended functionality and provides a good user experience. I utilize rigorous testing methodologies to identify potential issues early in the development process. My meticulous approach ensures that your software is bug-free and ready to meet user expectations.
                             </p>
                         </div>
                     </div>  
