--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             <h1 class="text-center">About Me</h1>
             <div class="row mt-2">
                 <div class="col-lg-4 mt-3">
-                    <img src="images/back.jpg" class= "imageAboutPage shadow rounded border-0" alt="">
+                    <img src="images/back.jpg" class= "imageAboutPage shadow rounded border-0 h-100" alt="">
                 </div>
 
                 <div class="col-lg-8 mt-3">
