--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
 
                 <div class="col-lg-6">
                     <!-- form fields -->
-                    <form action="https://formspree.io/f/xgejqggr" method="post">
+                    <form action="https://formspree.io/f/xgejqggr" method="post" class="mt-4">
                         <input type="text" class="form-control form-control-lg" placeholder="Name">
                         <input type="email" class="form-control mt-3" placeholder="Email">
                         <input type="text" class="form-control mt-3" placeholder="Subject">
