--- a/index.html
+++ b/index.html
@@ -220,8 +220,8 @@
 
                 <div class="col-lg-6">
                     <!-- form fields -->
-                    <form action="https://formspree.io/f/xgejqggr" method="post" class="mt-4">
-                        <input type="text" class="form-control form-control-lg" placeholder="Name">
+                    <form action="https://formspree.io/f/xgejqggr" method="post" class="mt-5">
+                        <input type="text" class="form-control " placeholder="Name">
                         <input type="email" class="form-control mt-3" placeholder="Email">
                         <input type="text" class="form-control mt-3" placeholder="Subject">
                         <div class="mb-3 mt-3">
