adds more changes

--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
 
     <title>Alex Njuguna</title>
 </head>
-<body background="images/background.gif">
+<body class="mybackground">
 
     <header>
-        <nav class="navbar navbar-expand-lg bg-light rounded shadow">
+        <nav class="navbar navbar-expand-lg bg-light shadow fixed-top">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#"><img src="images/logo.png" alt="logo" width='70px' class='rounded-circle'/></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -33,7 +33,7 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                     <li class="nav-item active">
-                        <a class="nav-link" href="#home">Home</a>
+                        <a class="nav-link fw-bolder" href="#home">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#about">About</a>
@@ -53,7 +53,7 @@
         </nav>
 
          <!-- main banner -->
-        <section class="bgimage" id="home">
+        <section class="bgimage shadow" id="home">
             <div class="container-fluid">
                 <div class="row">
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 hero-text">
@@ -88,7 +88,7 @@
     <!-- services section-->
     <section id="services">
         <div class="container">
-            <h1 class="text-center text-light">Services</h1>
+            <h1 class="text-center">Services</h1>
             <div class="row">
                 <div class="col-lg-4 mt-4">
                     <div class="card servicesText">
@@ -166,7 +166,7 @@
     <!-- portfolio section-->
     <section id="portfolio">
         <div class="container mt-3">
-            <h1 class="text-center text-light">sample works</h1>
+            <h1 class="text-center">sample works</h1>
             <div class="row">
                 <div class="col-lg-6 mt-4">
                     <div class="card">
@@ -203,7 +203,7 @@
     <!-- contact section-->
     <section id="contact">
         <div class="container mt-3 contactContent">
-            <h1 class="text-center text-light">reach out</h1>
+            <h1 class="text-center">reach out</h1>
 
             <div class="row mt-4">
                 <div class="col-lg-6">
