--- a/index.html
+++ b/index.html
@@ -53,16 +53,17 @@
         </nav>
 
          <!-- main banner -->
-        <section class="bgimage shadow" id="home">
+         <section class="bgimage shadow" id="home">
             <div class="container-fluid">
                 <div class="row">
-                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 hero-text">
-                    <h2 class="hero_title">Hi, it's me Alex</h2>
-                    <p class="hero_desc text-capitalize">I am a professional software Developer in Nairobi</p>
-                </div>
+                    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 hero-text">
+                        <h2 class="hero_title" id="typed-title"></h2>
+                        <p class="hero_desc text-capitalize" id="typed-desc"></p>
+                    </div>
                 </div>
             </div>
         </section>
+        
     </header>
     
     <!-- main section -->
