--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 <div class="row">
                     <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 hero-text">
                         <h2 class="hero_title" id="typed-title"></h2>
-                        <p class="hero_desc text-capitalize" id="typed-desc"></p>
+                        <p class="hero_desc text-capitalize alert  bg-dark text-light" id="typed-desc"></p>
                     </div>
                 </div>
             </div>
@@ -174,7 +174,7 @@
                         <img class="card-img-top" src="images/study-mate.png" alt="Card image" style="width:100%">
                         <div class="card-body">
                             <h4 class="card-title">Study Mate</h4>
-                            <p class="card-text">A platform that brings the various platforms that facilitate learning under one roof.</p>
+                            <p class="card-text text-center">A platform that brings the various platforms that facilitate learning under one roof.</p>
                             <div class="text-center">
                                 <a href="https://youtu.be/Fn5mu_3fmV8" target="_blank" class="btn btn-danger">Demo</a>
                                 <a href="https://github.com/alex-njuguna/study-portal" target="_blank" class="btn btn-success">Code</a>
@@ -188,7 +188,7 @@
                         <img class="card-img-top" src="images/farmers'-market.png" alt="Card image" style="width:100%">
                         <div class="card-body">
                             <h4 class="card-title">Farmers' Market</h4>
-                            <p class="card-text">E-Commerce fo farm products and inputs</p>
+                            <p class="card-text text-center">E-Commerce for farm products and inputs. Initiates payment through <a class="text-decoration-none" href="https://developer.safaricom.co.ke/">Mpesa.</a></p>
                             <div class="text-center">
                                 <a href="https://www.youtube.com/watch?v=8Nbfii55k-Y" class="btn btn-danger" target="_blank">demo</a>
                                 <a href="https://github.com/alex-njuguna/Farmers-Market-Ecommerce" class="btn btn-success" target="_blank">code</a>
