works on the footer

--- a/index.html
+++ b/index.html
@@ -243,8 +243,8 @@
 
 
      <!-- footer section-->
-     <footer id="footer">
-        <div class="container-fluid bg-light">
+     <footer id="footer" style="background: url('images/background.gif');">
+        <div class="container-fluid">
             <!-- social media icons -->
             <div class="social-icons mt-4">
                 <a href="https://www.facebook.com/profile.php?id=100088245074466" target="_blank"><i class="fab fa-facebook text-primary"></i></a>
