--- a/index.html
+++ b/index.html
@@ -82,7 +82,9 @@
                     <p>Looking ahead, I aim to apply my skills for innovative solutions, aspiring to make a positive impact. Eager for new challenges, I'm dedicated to personal and professional growth. In summary, I am a driven and passionate individual,  ready to learn from every experience and excited about achieving future goals.</p>
                 </div>
             </div>
-            <a class="btn btn-primary mt-2" href="images/Resume.pdf" target="_blank">resume</a>
+            <div class="container text-center mt-3">
+                <a class="btn btn-primary mt-2" href="images/Resume.pdf" target="_blank">view resume</a>
+            </div>
         </div>
     </section>
 
