--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
             <h1 class="text-center">reach out</h1>
 
             <div class="row mt-4">
-                <div class="col-lg-6">
+                <div class="col-lg-6 text-center">
                     <!-- to edit google map goto https://www.embed-map.com type your location, generate html code and copy the html  -->
                     <div style="max-width:100%;overflow:hidden;color:red;width:500px;height:500px;">
                         <div id="embedmap-canvas" style="height:100%; width:100%;max-width:100%;">
