--- a/index.html
+++ b/index.html
@@ -175,13 +175,16 @@
             <div class="row">
                 <div class="col-lg-6 mt-4">
                     <div class="card">
-                        <img class="card-img-top" src="images/study-mate.png" alt="Card image" style="width:100%">
+                        <!-- <img class="card-img-top" src="images/study-mate.png" alt="Card image" style="width:100%"> -->
+
+                        <iframe class="card-img-top" style="object-fit: cover;" width="560" height="315" src="https://www.youtube.com/embed/Fn5mu_3fmV8?si=ja8xB6bSWICC0ZKF" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+
                         <div class="card-body">
                             <h4 class="card-title">Study Mate</h4>
                             <p class="card-text text-center p-3">A platform that brings the various platforms that facilitate learning under one roof.</p>
                             <div class="text-center">
-                                <a href="https://youtu.be/Fn5mu_3fmV8" target="_blank" class="btn btn-danger">Demo</a>
-                                <a href="https://github.com/alex-njuguna/study-portal" target="_blank" class="btn btn-success">Code</a>
+                                <!-- <a href="https://youtu.be/Fn5mu_3fmV8" target="_blank" class="btn btn-danger">Demo</a> -->
+                                <a href="https://github.com/alex-njuguna/study-portal" target="_blank" class="btn btn-danger">Code</a>
                             </div>
                         </div>
                     </div>
@@ -189,13 +192,16 @@
 
                 <div class="col-lg-6 mt-4">
                     <div class="card portfolioContent">
-                        <img class="card-img-top" src="images/farmers'-market.png" alt="Card image" style="width:100%">
+                        <!-- <img class="card-img-top" src="images/farmers'-market.png" alt="Card image" style="width:100%"> -->
+
+                        <iframe class="card-img-top" style="object-fit: cover;" width="560" height="315" src="https://www.youtube.com/embed/8Nbfii55k-Y?si=PQK0L84G9tCG_hcY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+
                         <div class="card-body">
                             <h4 class="card-title">Farmers' Market</h4>
                             <p class="card-text text-center p-3">E-Commerce for farm products and inputs. Initiates payment through <a class="text-decoration-none" href="https://developer.safaricom.co.ke/">Mpesa.</a></p>
                             <div class="text-center">
-                                <a href="https://www.youtube.com/watch?v=8Nbfii55k-Y" class="btn btn-danger" target="_blank">demo</a>
-                                <a href="https://github.com/alex-njuguna/Farmers-Market-Ecommerce" class="btn btn-success" target="_blank">code</a>
+                                <!-- <a href="https://www.youtube.com/watch?v=8Nbfii55k-Y" class="btn btn-danger" target="_blank">demo</a> -->
+                                <a href="https://github.com/alex-njuguna/Farmers-Market-Ecommerce" class="btn btn-danger" target="_blank">code</a>
                             </div>
                         </div>
                     </div>
