--- a/index.html
+++ b/index.html
@@ -52,13 +52,16 @@
             </div>
         </nav>
 
+
+
          <!-- main banner -->
-         <section class="bgimage shadow" id="home">
+         <section class="bgimage" id="home">
             <div class="container-fluid">
+                <video src="videos/milky-way.mp4" autoplay muted loop></video>
                 <div class="row">
                     <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 hero-text">
                         <h2 class="hero_title" id="typed-title"></h2>
-                        <p class="hero_desc text-capitalize alert  bg-dark text-light" id="typed-desc"></p>
+                        <p class="hero_desc text-capitalize text-light" id="typed-desc"></p>
                     </div>
                 </div>
             </div>
