--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
 
 
      <!-- footer section-->
-     <footer id="footer" style="background: url('images/background.gif');">
+     <footer id="footer" style="background: url('images/background.gif'); object-fit: cover;">
         <div class="container-fluid">
             <!-- social media icons -->
             <div class="social-icons mt-4">
