--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     <!-- main section -->
        <!-- about section-->
        <section id="about">
-        <div class="container pt-4 text-dark">
+        <div class="container pt-4 text-light fs-5">
             <h1 class="text-center">About Me</h1>
             <div class="row mt-2">
                 <div class="col-lg-4 mt-3">
