--- a/index.html
+++ b/index.html
@@ -57,7 +57,10 @@
          <!-- main banner -->
          <section class="bgimage" id="home">
             <div class="container-fluid">
-                <video src="videos/milky-way.mp4" autoplay muted loop></video>
+                <video autoplay muted loop>
+                    <source src="videos/milky-way.mp4" type="video/mp4">
+                    <source src="videos/milky-way.webm" type="video/mp4">
+                </video>
                 <div class="row">
                     <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 hero-text">
                         <h2 class="hero_title" id="typed-title"></h2>
