transition styling using transform

--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                     <div class="card">
                         <!-- <img class="card-img-top" src="images/study-mate.png" alt="Card image" style="width:100%"> -->
 
-                        <iframe class="card-img-top" style="object-fit: cover;" width="560" height="315" src="https://www.youtube.com/embed/Fn5mu_3fmV8?si=ja8xB6bSWICC0ZKF" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                        <iframe class="card-img-top w-100" style="object-fit: cover;" width="560" height="315" src="https://www.youtube.com/embed/Fn5mu_3fmV8?si=ja8xB6bSWICC0ZKF" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
                         <div class="card-body">
                             <h4 class="card-title">Study Mate</h4>
@@ -200,7 +200,7 @@
                     <div class="card portfolioContent">
                         <!-- <img class="card-img-top" src="images/farmers'-market.png" alt="Card image" style="width:100%"> -->
 
-                        <iframe class="card-img-top" style="object-fit: cover;" width="560" height="315" src="https://www.youtube.com/embed/8Nbfii55k-Y?si=PQK0L84G9tCG_hcY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                        <iframe class="card-img-top w-100" style="object-fit: cover;" width="560" height="315" src="https://www.youtube.com/embed/8Nbfii55k-Y?si=PQK0L84G9tCG_hcY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
                         <div class="card-body">
                             <h4 class="card-title">Farmers' Market</h4>
