--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     <title>Alex Njuguna</title>
 </head>
-<body class="mybackground">
+<body>
 
     <header>
         <nav class="navbar navbar-expand-lg bg-light shadow fixed-top">
@@ -69,15 +69,16 @@
                 </div>
             </div>
         </section>
-        
     </header>
-    
-    <!-- main section -->
+
+
+    <div class="mybackground">
+        <!-- main section -->
        <!-- about section-->
        <section id="about">
         <div class="container pt-4 text-light fs-5">
             <h1 class="text-center">About Me</h1>
-            <div class="row mt-2">
+            <div class="row">
                 <div class="col-lg-4 mt-3">
                     <img src="images/back.jpg" class= "imageAboutPage shadow rounded border-0 h-100" alt="">
                 </div>
@@ -254,15 +255,14 @@
             </div>
         </div>
     </section>
-
-
+    </div>
 
 
      <!-- footer section-->
      <footer id="footer" style="background: url('images/background.gif'); object-fit: cover;">
         <div class="container-fluid">
             <!-- social media icons -->
-            <div class="social-icons mt-4">
+            <div class="social-icons">
                 <a href="https://www.facebook.com/profile.php?id=100088245074466" target="_blank"><i class="fab fa-facebook text-primary"></i></a>
                 <a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram text-danger"></i></a>
                 <a href="https://twitter.com/n_kienjeku" target="_blank"><i class="fab fa-twitter text-primary"></i></a>
