--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       name="description"
       content=""
     />
-    <link rel="shortcut icon" href="public/logo.svg" type="image/x-icon">
+    <link rel="shortcut icon" href="/logo.svg" type="image/x-icon">
   
     <!-- Font Family Link-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
