--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       name="description"
       content=""
     />
-    <link rel="shortcut icon" href="public/logo.svg" type="image/x-icon">
+    <link rel="shortcut icon" href="public/logo.jpeg" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
     <!-- Font Family Link-->
